tests/compile_fail/fmt/value_not_impl_display.rs
use sigmut::{core::Runtime, signal_format};

fn main() {
    let mut rt = Runtime::new();
    struct NoDisplay;
    let _s = signal_format!("{}", NoDisplay);
}
