tests/compile_fail/fmt/value_not_impl_display.stderr
error[E0277]: `NoDisplay` doesn't implement `std::fmt::Display`
 --> tests/compile_fail/fmt/value_not_impl_display.rs:6:14
  |
6 |     let _s = signal_format!("{}", NoDisplay);
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NoDisplay` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `NoDisplay`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = help: the trait `std::fmt::Display` is implemented for `FmtRef<'_, T>`
  = note: required for `FmtRef<'_, NoDisplay>` to implement `std::fmt::Display`
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `signal_format` (in Nightly builds, run with -Z macro-backtrace for more info)
